fix wrap

--- a/src/scss/blocks/_menu-mobile.scss
+++ b/src/scss/blocks/_menu-mobile.scss
@@ -9,6 +9,7 @@
             left: -100vw;
             z-index: 999;
             transition: left .3s;
+            flex-wrap: wrap;
         }
 
         &__list + &__list{
@@ -17,38 +18,38 @@
         
     }    
 
-    .menu__hamburger {
-        box-sizing: border-box;
-        display: block;
-        color: #fff;
-        background-color: #6a4d38;
-        padding: 5px;
-        cursor: pointer;
-        position: absolute;
-        top: 0;
-        left: calc(100vw - 70px);
-        transition: left .3s;
-        z-index: 1000;
-        width: 70px;
-        height: 50px;
-        -webkit-transform: translateZ(0);
-        padding: 17px;
-        & > span{
-            display: block;
-            height: 3px;
-            width: 35px;
-            background-color: #fff;
-            margin: 5px 0 0;
-            transition: all .1s linear .23s;
-            position: relative;
-        }
-        & > .first{
-            margin-top: 0;
-        }
-        
-    }
+    
         .menu{
         flex-direction: column;
+        &__hamburger {
+            box-sizing: border-box;
+            display: block;
+            color: #fff;
+            background-color: #6a4d38;
+            padding: 5px;
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            left: calc(100vw - 70px);
+            transition: left .3s;
+            z-index: 1000;
+            width: 70px;
+            height: 50px;
+            -webkit-transform: translateZ(0);
+            padding: 17px;
+            & > span{
+                display: block;
+                height: 3px;
+                width: 35px;
+                background-color: #fff;
+                margin: 5px 0 0;
+                transition: all .1s linear .23s;
+                position: relative;
+            }
+            & > .first{
+                margin-top: 0;
+            }
+        }
         &__item{
             width: 100%;
             background-color: #826550;
@@ -62,6 +63,7 @@
                 height: 50px;
                 justify-content: center;
                 align-items: center;
+                flex-wrap: wrap;
             }
             &--active{
                 &::after{
